--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1291,11 +1291,14 @@ input, select, textarea {
 			}
 
 		#header .logo {
-			width: 5.5rem;
-			height: 5.5rem;
-			line-height: 5.5rem;
+			width: 8.6rem;
+			height: 3.2rem;
+			line-height: 4.5rem;
 			border: solid 1px #ffffff;
-			border-radius: 100%;
+			border-style: solid;
+			border-radius: 3%
+			
+			
 		}
 
 			#header .logo .icon:before {
